fix. bug: control btn hide with spacing problem when lang=en

--- a/src/pages/home/scss/_en.scss
+++ b/src/pages/home/scss/_en.scss
@@ -46,9 +46,13 @@ body.en {
       }
     }
     .page-quiz__control {
+      font-size: 0;
       .control__btn {
         font-size: 14px;
         font-weight: $bold;
+      }
+      .control__btn.hide {
+        font-size: 0;
       }
     }
   }
